--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -9,6 +9,10 @@
 }
 
 .container > .row-short {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
     width: 600px;
     margin: 0 calc((100% - 600px)/2);
 }
