--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -14,12 +14,11 @@
 .main-title {
     font-size: 70px;
     text-transform: uppercase;
+    text-align: center;
 }
-@media (max-width: 700px) {
-    .main-title{
-        font-size:45px;
-    }
-}
+
+
 .main-description {
     font-size: 20px;
+    text-align: center;
 }
