--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,8 +1,9 @@
 /*base*/
 @import "../base/base.css";
+@import "../3rd-party/font-awesome.min.css";
 @import "../base/layout.css";
 
-/*3rd-party*/
+
 /*components*/
 
 /*Custom style below this comment*/
