--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -15,7 +15,8 @@
 .container > .row {
     display: flex;
     flex-wrap: wrap;
-    gap: 60px 10%;
+    gap: 60px 0;
+    justify-content: center;
     width: 1000px;
     margin: 0 calc((100% - 1000px)/2);
 }
@@ -26,6 +27,7 @@
 
 .column.right-column {
     width: 40%;
+    margin-left: auto;
 }
 
 @media (max-width: 1100px) {
