--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -23,3 +23,32 @@
     font-size: 20px;
     text-align: center;
 }
+
+footer.container {
+    padding-top: 0;
+}
+
+.row.socials {
+    display: flex;
+    gap: 10px;
+    border-bottom: 1px solid #fff;
+    padding: 0.5em 0; /*1em = 20px*/
+    margin-bottom: 40px;
+}
+
+.fa {
+    height: 2.5em;
+    width: 2.5em;
+    line-height: 2.5em;
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 50%;
+    transition: all 5s;
+}
+
+.fa:hover {
+    background-color: #fff;
+    color: #03a9f3;
+    transition: all 1s;
+}
