--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -1,24 +1,24 @@
 .container {
     width: 100%;
-    padding: 60px 0;
+    padding: 3.7rem 0;
 }
 
 .container > .row-short {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    width: 600px;
-    margin: 0 calc((100% - 600px)/2);
+    gap: 1.3rem;
+    width: 37.5rem;
+    margin: 0 calc((100% - 37.5rem)/2);
 }
 
 .container > .row {
     display: flex;
     flex-wrap: wrap;
-    gap: 60px 0;
+    gap: 3.75rem 0;
     justify-content: center;
-    width: 1000px;
-    margin: 0 calc((100% - 1000px)/2);
+    width: 62rem;
+    margin: 0 calc((100% - 62rem)/2);
 }
 
 .container .column {
@@ -30,25 +30,25 @@
     margin-left: auto;
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 68rem) {
     .container > .row {
-        width: 800px;
-        margin: calc((100% - 800px)/2);
+        width: 50rem;
+        margin: calc((100% - 50rem)/2);
     }
 }
 
-@media (max-width: 900px) {
+@media (max-width: 56rem) {
     .container > .row {
-        width: 600px;
-        margin: calc((100% - 600px)/2);
+        width: 38rem;
+        margin: calc((100% - 38rem)/2);
     }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 44rem) {
     .container > .row,
     .container > .row-short {
-        width: 400px;
-        margin: calc((100% - 400px)/2);
+        width: 25rem;
+        margin: calc((100% - 25rem)/2);
     }
     .container .column,
     .column.right-column {
@@ -56,10 +56,10 @@
     }
 }
 
-@media (max-width: 440px) {
+@media (max-width: 28rem) {
     .container {
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 1.3rem;
+        padding-right: 1.3rem;
     }
     .container > .row,
     .container > .row-short {
