--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     gap: 1.3rem;
-    width: 37.5rem;
+    width: 38rem;
     margin: 0 calc((100% - 37.5rem)/2);
 }
 
@@ -65,5 +65,42 @@
     .container > .row-short {
         width: 100%;
         margin: 0;
+    }
+}
+
+footer.container .row-short {
+    
+    color: #fffa;
+    font-size: 1.1rem;
+    text-align: center;
+}
+
+footer .row-short a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-logo {
+    height: 3rem;
+    margin-bottom: 2rem;
+}
+
+.text-trio > p::after {
+    content: "";
+    display: inline-block;
+    width: 0.1rem;
+    height: 1rem;
+    margin-left: 0;
+    background-color: #fff;
+}
+
+.text-trio > p:last-child::after {
+    display: none;
+}
+
+@media (min-width: 44rem) {
+    .text-trio {
+        display: flex;
+        gap: 1.7rem;
     }
 }
