--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -85,13 +85,19 @@ footer .row-short a {
     margin-bottom: 2rem;
 }
 
+.text-trio > p {
+    position: relative;
+}
 .text-trio > p::after {
     content: "";
-    display: inline-block;
+    display: none;
     width: 0.1rem;
     height: 1rem;
-    margin-left: 0;
     background-color: #fff;
+    position: absolute;
+    top: 50%;
+    right: -0.9rem;
+    transform: translateY(-50%);
 }
 
 .text-trio > p:last-child::after {
@@ -102,5 +108,9 @@ footer .row-short a {
     .text-trio {
         display: flex;
         gap: 1.7rem;
+    }
+
+    .text-trio > p::after {
+        display: block;
     }
 }
