--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -23,6 +23,9 @@
 
 .container .column {
     width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
 
 .column.right-column {
