--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -11,6 +11,14 @@
 
 /*Custom style below this comment*/
 
+.hero {
+    background-image: url(../../img/background.png);
+    background-size: cover;
+    background-position: bottom;
+    background-attachment: fixed;
+    min-height: 100vh;
+}
+
 .logo {
     width: 3rem;
 }
@@ -19,6 +27,7 @@
     font-size: 4rem;
     text-transform: uppercase;
     text-align: center;
+
 }
 
 
