--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -8,6 +8,7 @@
 @import "../components/clock.css";
 @import "../components/mouse.css";
 @import "../components/progress-bar.css";
+@import "../components/form.css";
 
 /*Custom style below this comment*/
 
