--- a/css/components/form.css
+++ b/css/components/form.css
@@ -2,9 +2,39 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.1rem;
 
 }
 
 .form label {
     display: none;
+}
+
+.form input,
+.form textarea {
+    width: 100%;
+    padding: 0.5em 0.1em;
+    font-size: inherit;
+    font-family: inherit;
+    color: black;
+    line-height: 1.3em;
+    border: none;
+    border-bottom: 0.1rem solid rgb(161, 161, 161);
+
+}
+
+.form textarea {
+    min-height: 3.6em;
+    height: 6.2em;
+    max-height: 14em;
+    resize: vertical;
+}
+
+.form ::placeholder {
+    color: rgb(139, 153, 167);
+    font-style: italic;
+}
+:focus-visible {
+        outline: 2px solid var(--main-color);
 }
