--- a/css/components/progress-bar.css
+++ b/css/components/progress-bar.css
@@ -30,7 +30,7 @@
 }
 
 .progress-bar .progress > .bar {
-    background-color: #03a9f3;
+    background-color: var(--main-color);
     height: 100%;
     width: 100%;
     animation-name: loading;
