--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -9,6 +9,7 @@
 @import "../components/mouse.css";
 @import "../components/progress-bar.css";
 @import "../components/form.css";
+@import "../components/button.css";
 
 /*Custom style below this comment*/
 
