--- a/css/components/form.css
+++ b/css/components/form.css
@@ -1,5 +1,6 @@
 .form {
     display: flex;
+    align-items: flex-end;
     flex-direction: column;
     gap: 1rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
